fix: 🎨 missing border radius on app item

--- a/src/styles/lists.styl
+++ b/src/styles/lists.styl
@@ -79,6 +79,7 @@ sundown = #ffb3b3
 
 .app-list
     .item-wrapper
+        border-radius rem(4)
         &:hover
         &:focus
             background-color white
